--- a/src/app/socialmedia/socialmedia.component.html
+++ b/src/app/socialmedia/socialmedia.component.html
@@ -2,4 +2,7 @@
     <li><img src="youtube.png"></li>
     <li><img src="instagram.png"></li>
     <li><img src="linkedin.png"></li>
-  </ul>
+</ul>
+<p>Sign Up for Our Newsletter!</p>
+<input class="emailInput" type="email" [(ngModel)]="signUpNotif">   
+<button class="btn btn-primary" (click)="signUp()">Sign Up</button>
