--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -21,6 +21,9 @@
         <li class="nav-item">
           <a class="nav-link" routerLink="/students" routerLinkActive="menuSelected">Students</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/videos" routerLinkActive="menuSelected">Videos</a>
+        </li>
         
         
       </ul>
