--- a/src/app/socialmedia/socialmedia.component.scss
+++ b/src/app/socialmedia/socialmedia.component.scss
@@ -1,9 +1,24 @@
 ul.social li{
     list-style: none;
     display: inline-block;
+    margin-top: 20px;
 
     img{
         height: 35px;
         margin: 0 5px;
     }
+}
+
+.btn{
+    margin-left: 10px;
+}
+
+.emailInput{
+    color: gray;
+    font-style: italic;
+}
+
+p{
+    margin: 0px;
+    font-size: 10px;
 }
